
Added support for devices connected via synce-hal. Odccm support is unaffected,
no configuration is required.

23/04/2008 - 200000 Mark Ellis
------------------------------

Changes to auth procedure on locked devices for WM6.

06/05/2008 - 214500 Dr J A Gow
------------------------------

Folded in patches from Daniel Frickemeyer to correct the handling of categories
in tasks and events when using Opensync 0.3x.


07/05/2008 - 140000 Mark Ellis
------------------------------

Clarify handling of WM6 authorisation on device from user perspective, ie.
output a suitable message instead of 'auth failed'

16/05/2008 - 225000 Dr J A Gow
------------------------------

Removed hard defaults from config.xml, leaving them commented in. Checked and
updated the defaults in the code to match the current file defaults. Modifed
a line in CHANGELOG to have a length less than 80chrs.

23/05/2008 - 162100 Dr J A Gow
------------------------------

Applied patch from Mark Ellis to allow processing of config files in system
(etc), user (.synce) locations, after removing some redundancy.
Renamed config.xml to syncengine.conf.xml (including the template file in the
source tree).

29/05/2008 - 181900 Dr J A Gow
------------------------------

Fixed typo in _ProcessAuth preventing authorization from working correctly.

30/05/2008 - 113600 Dr J A Gow
------------------------------

Minor fix to debug messages in authorization code for clarity.

10/06/2008 - 193900 Dr J A Gow
------------------------------

Folded in patches from Daniel Frickermeyer to fix:

    - config file opening
    - config file in setup.py
    - XML handling in formats30

Also added code to release the sync event when the device is disconnected
while synchronizing - have discovered that under certain circumstances it
is possible for a device to get its state screwed up. This results in a 
sync-engine refusing to sync the device when it is replugged! This should
clear this problem but time will tell.




